--- a/html/blog/main.css
+++ b/html/blog/main.css
@@ -7,8 +7,9 @@
 hr{
   width: 100%;
   margin: 0 0 5px;
-  height: 2px;
+  height: 1px;
   background-color: #000;
+  border-color: transparent;
 }
 
 .post {
